@@ -1371,19 +1371,25 @@ void init_sb_vol_table(void)
 		sb_vol_table[i] = pow(10.0, (double)(1023 - i) * 960.0 / (1023.0 * -200.0));
 }
 
-FLOAT_T convex_vol_table[1024];
+FLOAT_T modenv_attack_vol_table[1024];
+FLOAT_T modenv_decay_vol_table[1024];
 
-void init_convex_vol_table(void)
+void init_modenv_vol_table(void)
 {
 	int i;
-	
+	double x;
+
 	for (i = 0; i < 1024; i++) {
-		convex_vol_table[i] = 1.0 - (-20.0 / 96.0 * log(((double)i * (double)i) / (1023.0 * 1023.0)) / log(10.0));
-		if(convex_vol_table[i] < 0) {convex_vol_table[i] = 0;}
+		modenv_decay_vol_table[i] = log((double)i / 1023.0f + 1) / log(2);
 	}
 
-	convex_vol_table[0] = 0;
-	convex_vol_table[1023] = 1.0;
+	modenv_attack_vol_table[0] = 0;
+	for (i = 1; i < 1023; i++) {
+		x = (1.0 - (-20.0 / 96.0 * log(((double)i * (double)i) / (1023.0 * 1023.0)) / log(10.0)));
+		if(x < 0) {x = 0;}
+		modenv_attack_vol_table[i] = log(x + 1) / log(2);
+	}
+	modenv_attack_vol_table[1023] = 1.0;
 }
 
 FLOAT_T cb_to_amp_table[961] = 
