@@ -75,7 +75,8 @@ extern FLOAT_T sc_vol_table[];
 extern FLOAT_T sc_pan_table[], gm2_pan_table[];
 extern FLOAT_T sc_drum_level_table[];
 extern FLOAT_T sb_vol_table[];
-extern FLOAT_T convex_vol_table[];
+extern FLOAT_T modenv_attack_vol_table[];
+extern FLOAT_T modenv_decay_vol_table[];
 extern FLOAT_T cb_to_amp_table[];
 extern FLOAT_T reverb_time_table[];
 extern FLOAT_T pan_delay_table[];
@@ -95,7 +96,7 @@ extern void init_tables(void);
 extern void init_gm2_pan_table(void);
 extern void init_attack_vol_table(void);
 extern void init_sb_vol_table(void);
-extern void init_convex_vol_table(void);
+extern void init_modenv_vol_table(void);
 extern void init_def_vol_table(void);
 extern void init_gs_vol_table(void);
 extern void init_perceived_vol_table(void);
